--- a/applications/ws/local/client/yathra/css/freelancer.css
+++ b/applications/ws/local/client/yathra/css/freelancer.css
@@ -85,9 +85,15 @@ header {
     background: #18bc9c;
 }
 
+.topDiv{
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+
 header .container {
-    padding-top: 70px;
-    padding-bottom: 0px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 header img {
@@ -110,8 +116,8 @@ header .intro-text .skills {
 
 @media(min-width:768px) {
     header .container {
-        padding-top: 200px;
-        padding-bottom: 100px;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 
     header .intro-text .name {
