--- a/applications/ws/local/client/yathra/css/freelancer.css
+++ b/applications/ws/local/client/yathra/css/freelancer.css
@@ -96,6 +96,11 @@ header .container {
     padding-bottom: 10px;
 }
 
+.mainPage {
+    padding-top: 50px;
+    padding-bottom: 10px;
+}
+
 header img {
     display: block;
     margin: 0 auto 20px;
