--- a/applications/ws/local/client/yathra/css/tab.css
+++ b/applications/ws/local/client/yathra/css/tab.css
@@ -18,3 +18,14 @@ a:hover {
 .buttonColor{
 	background: #FDF5E6;
 }
+
+header .websiteView {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+header .mobileView {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
