--- a/applications/ws/prod/client/yathra/css/tab.css
+++ b/applications/ws/prod/client/yathra/css/tab.css
@@ -46,7 +46,24 @@ display:none;
 }
 
 hr{
-	background-color: #18bc9c;border-width:3;
+	background-color: #18bc9c;border-width:2;
 }
 
+.divider {
+    text-align:center;
+}
 
+.divider hr {
+    margin-left:auto;
+    margin-right:auto;
+    width:40%;
+
+}
+
+.left {
+    float:left;
+}
+
+.right {
+    float:right;
+}
