--- a/applications/ws/local/client/tab/mobile/css/jquery-ui.css
+++ b/applications/ws/local/client/tab/mobile/css/jquery-ui.css
@@ -844,8 +844,8 @@ body .ui-tooltip {
 	font-size: 1em;
 }
 .ui-widget-content {
-	border: 1px solid #aaaaaa;
-	background: #ffffff url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
+	border: 1px solid #428bca;
+	background: #f9f9f9 url("images/ui-bg_flat_75_ffffff_40x100.png") 50% 50% repeat-x;
 	color: #222222;
 }
 .ui-widget-content a {
@@ -853,8 +853,8 @@ body .ui-tooltip {
 }
 .ui-widget-header {
 	border: 1px solid #aaaaaa;
-	background: #cccccc url("images/ui-bg_highlight-soft_75_cccccc_1x100.png") 50% 50% repeat-x;
-	color: #222222;
+	background: #428bca url("images/ui-bg_highlight-soft_75_cccccc_1x100.png") 50% 50% repeat-x;
+	color: #5cb85c;
 	font-weight: bold;
 }
 .ui-widget-header a {
@@ -866,10 +866,10 @@ body .ui-tooltip {
 .ui-state-default,
 .ui-widget-content .ui-state-default,
 .ui-widget-header .ui-state-default {
-	border: 1px solid #d3d3d3;
+	border: 2px solid #d3d3d3;
 	background: #e6e6e6 url("images/ui-bg_glass_75_e6e6e6_1x400.png") 50% 50% repeat-x;
-	font-weight: normal;
-	color: #555555;
+	font-weight: bold;
+	color: #5bc0de;
 }
 .ui-state-default a,
 .ui-state-default a:link,
@@ -886,7 +886,7 @@ body .ui-tooltip {
 	border: 1px solid #999999;
 	background: #dadada url("images/ui-bg_glass_75_dadada_1x400.png") 50% 50% repeat-x;
 	font-weight: normal;
-	color: #212121;
+	color:#5bc0de;
 }
 .ui-state-hover a,
 .ui-state-hover a:hover,
